@@ -3,7 +3,7 @@
   <groupId>org.projectforge</groupId>
   <artifactId>ProjectForge</artifactId>
   <packaging>war</packaging>
-  <version>3.6.1.2</version>
+  <version>3.6.1.5</version>
   <name>ProjectForge</name>
   <description>
     ProjectForge is a multi user web application for collaborative team work. Organize time sheets, tasks, addresses, books etc. with project teams.
@@ -44,17 +44,6 @@
         <role>architect</role>
         <role>developer</role>
         <role>CEO</role>
-      </roles>
-      <timezone>-1</timezone>
-    </developer>
-    <developer>
-      <id>markus</id>
-      <name>Markus Schwarz</name>
-      <email>m.schwarz@micromata.de</email>
-      <organization>Micromata GmbH</organization>
-      <organizationUrl>http://www.micromata.com</organizationUrl>
-      <roles>
-        <role>web designer</role>
       </roles>
       <timezone>-1</timezone>
     </developer>
@@ -362,7 +351,7 @@
     <dependency> <!-- Version check: 2010-12-10 -->
       <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache-core</artifactId>
-      <version>2.3.2</version>
+      <version>2.4.7</version>
     </dependency>
     <dependency> <!-- Version check: 2010-08-28 -->
       <groupId>org.apache.poi</groupId>
@@ -520,7 +509,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>3.0-beta-3</version>
+          <version>3.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -551,8 +540,10 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.7.2</version>
+        <version>2.11</version>
         <configuration>
+          <!--forkMode>always</forkMode-->
+          <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
           <includes>
             <include>**/*Test.java</include>
           </includes>
@@ -619,12 +610,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.7.2</version>
+        <version>2.11</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.7</version>
+        <version>2.8</version>
         <configuration>
           <encoding>utf-8</encoding>
           <charset>utf-8</charset>
@@ -633,7 +624,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.3.1</version>
+        <version>2.4</version>
       </plugin>
       <plugin> <!-- >>>>>>>>>>> -->
         <groupId>org.apache.maven.plugins</groupId>
